--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <h1>Thunderbolts* | Trailer Oficial Dublado</h1>
 
-<p></p>tindicações da semana: Thunderbolts</p>
+<p>indicações da semana: Thunderbolts</p>
 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/MaLy0D2FTDc?si=mEL9NKslccBzpUxP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
