--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
-<header>Aluraflix</header>
+<html lang="pt-BR">
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <title>Aluraflix</title>
+</head>
 
-<h1>Thunderbolts* | Trailer Oficial Dublado</h1>
+<body>
+    <header>ALURAFLIX</header>
 
-<p>indicações da semana: Thunderbolts</p>
+    <section>
+        <div>
+            <h1>Thunderbolts* | Trailer Oficial Dublado</h1>
+            <p>#Thunderbolts</p>
+        </div>
 
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/MaLy0D2FTDc?si=mEL9NKslccBzpUxP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</body>
+
+</html>
