--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>GUIMINAMFLIX</header>
+    <header>IsaMINAMFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
