--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Isaminamflix</title>
+    <title>ISAminamflix</title>
 </head>
 
 <body>
-    <header>IsaMINAMFLIX</header>
+    <header>ISAMINAMFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
